fix: adjust loop to contain metric name
