# src/swagger/routes.ts
@@ -12,18 +12,16 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "Log": {
+    "Metric": {
         "dataType": "refObject",
         "properties": {
             "id": {"dataType":"string","required":true},
             "created_at": {"dataType":"datetime","required":true},
             "update_at": {"dataType":"datetime","required":true},
-            "type": {"dataType":"string","required":true},
             "metric_name": {"dataType":"string","required":true},
             "time_stamp": {"dataType":"datetime","required":true},
-            "labels": {"dataType":"any","required":true},
             "metric": {"dataType":"any","required":true},
-            "extras": {"dataType":"any","required":true},
+            "value": {"dataType":"double","required":true},
             "project": {"ref":"Project","required":true},
         },
         "additionalProperties": false,
@@ -41,7 +39,7 @@ const models: TsoaRoute.Models = {
             "owner_id": {"dataType":"double","required":true},
             "updated_at": {"dataType":"datetime","required":true},
             "created_at": {"dataType":"datetime","required":true},
-            "logs": {"dataType":"array","array":{"dataType":"refObject","ref":"Log"},"required":true},
+            "metrics": {"dataType":"array","array":{"dataType":"refObject","ref":"Metric"},"required":true},
         },
         "additionalProperties": false,
     },
@@ -68,30 +66,28 @@ export function RegisterRoutes(app: Router) {
 
 
     
-        const argsLogController_getLogs: Record<string, TsoaRoute.ParameterSchema> = {
+        const argsLogController_getMetrics: Record<string, TsoaRoute.ParameterSchema> = {
                 time_difference: {"in":"query","name":"time_difference","ref":"timeDifference"},
                 page: {"in":"query","name":"page","dataType":"double"},
                 metric_name: {"in":"query","name":"metric_name","dataType":"string"},
-                metric_type: {"in":"query","name":"metric_type","dataType":"string"},
-                source: {"in":"query","name":"source","dataType":"string"},
                 limit: {"in":"query","name":"limit","dataType":"double"},
         };
-        app.get('/logs/search-logs',
+        app.get('/logs/search-metrics',
             ...(fetchMiddlewares<RequestHandler>(LogController)),
-            ...(fetchMiddlewares<RequestHandler>(LogController.prototype.getLogs)),
+            ...(fetchMiddlewares<RequestHandler>(LogController.prototype.getMetrics)),
 
-            async function LogController_getLogs(request: ExRequest, response: ExResponse, next: any) {
+            async function LogController_getMetrics(request: ExRequest, response: ExResponse, next: any) {
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args: argsLogController_getLogs, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsLogController_getMetrics, request, response });
 
                 const controller = new LogController();
 
               await templateService.apiHandler({
-                methodName: 'getLogs',
+                methodName: 'getMetrics',
                 controller,
                 response,
                 next,
